@@ -44,7 +44,7 @@ int main()
   MeshFunction<unsigned int> sub_domains(mesh, "../subdomains.xml.gz");
 
   // Create function space and subspaces
-  StokesFunctionSpace W(mesh);
+  Stokes::FunctionSpace W(mesh);
   SubSpace W0(W, 0);
   SubSpace W1(W, 1);
 
@@ -68,8 +68,8 @@ int main()
 
   // Set up PDE
   Constant f(2, 0.0);
-  StokesBilinearForm a(W, W);
-  StokesLinearForm L(W);
+  Stokes::BilinearForm a(W, W);
+  Stokes::LinearForm L(W);
   L.f = f;
   VariationalProblem pde(a, L, bcs);
 
