@@ -1,3 +1,4 @@
+ - Interface change for wrapper code: PoissonBilinearForm --> Poisson::BilinearForm
  - Add function info_underline() for writing underlined messages
  - Rename message() --> info() for "compatibility" with Python logging module
  - Add elementwise multiplication in GeneriVector interface
